# urp

./: .gitattributes  .gitignore  README.md
Assets/Calibration/: CoconutBottleRepairCalibration.asset
Assets/Docs/: BottleFullAlignedV2Pipeline.md  BottleTrackingFailureReplay.json  LatestFailureDiagnosis.md  Paper52ObjectTrackingFlow.md  README_URP_AR.md  ReferenceBReplayReport.json  ReferenceBTrackingPipeline.md  RepairCalibration.md  TissueRepairAssetAssessment.md  TissueSourceInventory.md  TrackingArchitectureAudit.md  TrackingReplayBaseline.md
Assets/Editor/: BuildIdentityGenerator.cs  CleanBottleModelPreview.cs  MeshroomBottleCapPreview.cs  MeshroomBottleDamagedPreview.cs  MeshroomBottlePreview.cs  UrpArProjectSetup.cs  UrpArValidation.cs
Assets/Materials/: BottleCapRimShadow.mat  BottleDepthOccluder.mat  BottleNeckOccluder.mat  BottleNeckOcclusion.mat  BottlePhotogrammetryLit.mat  BottleViewerLit.mat  CleanBottleCapLit.mat  CleanWhiteBottleCap.mat  DamagedBottleGuide.mat  DamagedBottleNeckGuide.mat  MeshroomCapRepairMaterial.mat  PhysicalArtifactHint.mat  ReferenceBottleBAlignmentGuide.mat  ReferenceBottleBValidation.mat  (+3 more)
Native/UrpOrbNative/: CMakeLists.txt  README.md
Native/UrpOrbNative/src/: urp_orb_native.cpp
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
Tools/: build_complete_bottle_model.py  canonicalize_bottle_tracking.py  clean_bottle_mesh.py  clean_meshroom_object.py  generate_orb_3d_models.py  merge_orb_3d_models.py  register_repair_mesh.py  validate_project_data.py
(+88 files in other folders)
